--- a/server/.env
+++ b/server/.env
@@ -5,7 +5,7 @@ MONGO_URI =
 
 # Admin Credentials
 ADMIN_EMAIL = "admin@example.com"
-ADMIN_PASSWORD = "123456"
+ADMIN_PASSWORD = "nghiabd"
 
 # JWT Secret
 JWT_SECRET = 
