--- a/server/.env
+++ b/server/.env
@@ -1,19 +1,19 @@
 PORT = 3000
 
 # MongoDB
-MONGO_URI = 
+MONGO_URI = "mongodb+srv://<username>:<password>@cluster.mongodb.net/blog" 
 
 # Admin Credentials
 ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "nghiabd"
 
 # JWT Secret
-JWT_SECRET = 
+JWT_SECRET = "your_secret_key"
 
 # ImageKit
-IMAGEKIT_PUBLIC_KEY = 
-IMAGEKIT_PRIVATE_KEY = 
-IMAGEKIT_URL_ENDPOINT = 
+IMAGEKIT_PUBLIC_KEY = "your_imagekit_public"
+IMAGEKIT_PRIVATE_KEY = "your_imagekit_private"
+IMAGEKIT_URL_ENDPOINT = "https://ik.imagekit.io/your_id"
 
 # OpenRouter API
-DEEPSEEK_FREE_API = 
+DEEPSEEK_FREE_API = "your_deepseek_api_key"
